# SSH-Explorer

./: .gitignore  CMakeLists.txt  connectiondialog.cpp  connectiondialog.h  connectiondialog.ui  connectionhandler.cpp  connectionhandler.h  connectionmanager.cpp  connectionmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  remotefilesystem.cpp  remotefilesystem.h  sshwrapper.cpp  sshwrapper.h  texteditor.cpp  texteditor.h  texteditor.ui  texttab.cpp  texttab.h  texttab.ui  vcpkg.json
